View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029365 | Open CASCADE | OCCT:Visualization | public | 2017-12-04 15:13 | 2018-06-29 21:19 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029365: Visualization, TKOpenGl - do not include hidden structures to Rendered within frame statistics | ||||
Description | Structure visibility flag is currently ignored by frame statistics leading to incorrect information. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29365 has been created by kgv. SHA-1: cb7ca0b90a7364c8876041dfe66301bd121da4e5 Detailed log of new commits: Author: kgv Date: Mon Dec 4 15:16:34 2017 +0300 0029365: Visualization, TKOpenGl - do not include hidden structures to Rendered within frame statistics OpenGl_Layer::UpdateCulling() now considers structure as culled in case if it has Hidden state. |
|
Please raise the patch. http://jenkins-test-10.nnov.opencascade.com:8080/view/CR29365-master-KGV |
|
Combination - OCCT branch : CR29365 SHA - cb7ca0b90a7364c8876041dfe66301bd121da4e5 Products branch : master SHA - 415c5096b9b013d1fad1454581bcdbe1e6090b5d was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18451.429999999604 / 18469.379999999688 [-0.10%] Products Total CPU difference: 7454.930000000011 / 7457.550000000003 [-0.04%] Windows-64-VC10: OCCT Total CPU difference: 17837.778343998587 / 17828.96428749855 [+0.05%] Products Total CPU difference: 8011.493755399975 / 8009.6685436999705 [+0.02%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29365 has been updated by kgv. SHA-1: 55bc7d6b3a6d07561af8ea568cd1a52b1d901d9f Detailed log of new commits: Author: kgv Date: Thu Dec 7 15:56:08 2017 +0300 # OpenGl_FrameStats::FrameEnd() - fix misprints in conditions |
|
Branch CR29365 has been deleted by kgv. SHA-1: 55bc7d6b3a6d07561af8ea568cd1a52b1d901d9f |
occt: master 5dc0517d 2017-12-04 12:16:34 Committer: bugmaster Details Diff |
0029365: Visualization, TKOpenGl - do not include hidden structures to Rendered within frame statistics OpenGl_Layer::UpdateCulling() now considers structure as culled in case if it has Hidden state. |
Affected Issues 0029365 |
|
mod - src/OpenGl/OpenGl_FrameStats.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_FrameStats.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Layer.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Layer.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_LayerList.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-12-04 15:13 | kgv | New Issue | |
2017-12-04 15:13 | kgv | Assigned To | => kgv |
2017-12-04 15:13 | kgv | Relationship added | child of 0029346 |
2017-12-04 15:16 | git | Note Added: 0072687 | |
2017-12-04 19:35 | kgv | Note Added: 0072699 | |
2017-12-04 19:35 | kgv | Assigned To | kgv => bugmaster |
2017-12-04 19:35 | kgv | Status | new => resolved |
2017-12-04 19:35 | kgv | Status | resolved => reviewed |
2017-12-04 20:12 | bugmaster | Note Added: 0072706 | |
2017-12-04 20:12 | bugmaster | Status | reviewed => tested |
2017-12-04 20:12 | bugmaster | Test case number | => Not required |
2017-12-07 15:57 | git | Note Added: 0072768 | |
2017-12-08 23:00 | bugmaster | Changeset attached | => occt master 5dc0517d |
2017-12-08 23:00 | bugmaster | Status | tested => verified |
2017-12-08 23:00 | bugmaster | Resolution | open => fixed |
2017-12-11 12:00 | git | Note Added: 0072898 | |
2018-02-20 12:58 |
|
Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |