0029365: Visualization, TKOpenGl - do not include hidden structures to Rendered within frame statistics

OpenGl_Layer::UpdateCulling() now considers structure as culled in case if it has Hidden state.